# word_mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  word_mcp.py
